--- a/index.html
+++ b/index.html
@@ -248,42 +248,42 @@
                  <div class="project-item padd-15">
                     <div class="project-item-inner shadow-dark">
                         <div class="project-img">
-                            <a href="/Module 5/module5.html " target="_blank"><img src="/image/2022-11-30.png" height="300px" width="300px"></a>
+                            <a href="Module 5/module5.html " target="_blank"><img src="image/2022-11-30.png" height="300px" width="300px"></a>
                         </div>
                     </div>   
                  </div>
                  <div class="project-item padd-15">
                     <div class="project-item-inner shadow-dark">
                         <div class="project-img">
-                            <a href="/Module 6/module6.html " target="_blank"><img src="/image/2022-11-30 (1).png" height="300px" width="300px"></a>
+                            <a href="Module 6/module6.html " target="_blank"><img src="image/2022-11-30 (1).png" height="300px" width="300px"></a>
                         </div>
                     </div>   
                  </div>
                  <div class="project-item padd-15">
                     <div class="project-item-inner shadow-dark">
                         <div class="project-img">
-                            <a href="/Module 10/module.html " target="_blank"><img src="/image/2022-11-30 (3).png"height="300px" width="300px"></a>
+                            <a href="Module 10/module.html " target="_blank"><img src="image/2022-11-30 (3).png"height="300px" width="300px"></a>
                         </div>
                     </div>   
                  </div>
                  <div class="project-item padd-15">
                     <div class="project-item-inner shadow-dark">
                         <div class="project-img">
-                            <a href="/Module 9/project9.html " target="_blank"><img src="/image/2022-11-30 (2).png"height="300px" width="300px"></a>
+                            <a href="Module 9/project9.html " target="_blank"><img src="image/2022-11-30 (2).png"height="300px" width="300px"></a>
                         </div>
                     </div>   
                  </div>
                  <div class="project-item padd-15">
                     <div class="project-item-inner shadow-dark">
                         <div class="project-img">
-                            <a href="/Practice/index.html " target="_blank"><img src="/image/2022-11-30 (5).png" height="300px" width="300px"></a>
+                            <a href="Practice/index.html " target="_blank"><img src="image/2022-11-30 (5).png" height="300px" width="300px"></a>
                         </div>
                     </div>   
                  </div>
                  <div class="project-item padd-15">
                     <div class="project-item-inner shadow-dark">
                         <div class="project-img">
-                            <a href="/Practice/Portfolio.html " target="_blank"><img src="/image/2022-11-30 (4).png" height="300px" width="300px"></a>
+                            <a href="Practice/Portfolio.html " target="_blank"><img src="image/2022-11-30 (4).png" height="300px" width="300px"></a>
                         </div>
                     </div>   
                  </div>
